--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,13 +1,13 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home4/skoolfdp/public_html/mps/
-    - /bin/cp -R applications $DEPLOYPATH
-    - /bin/cp -R system $DEPLOYPATH
-    - /bin/cp -R tests $DEPLOYPATH
-    - /bin/cp -R api.php $DEPLOYPATH
-    - /bin/cp -R index.php $DEPLOYPATH
-    - /bin/cp -R student.php $DEPLOYPATH
-    - /bin/cp -R transport.php $DEPLOYPATH
+    - export DEPLOYPATH=/home4/skoolfdp/public_html/mps/applications/student/testing/
+    - /bin/cp -R applications/student/testing/config.php $DEPLOYPATH
+#    - /bin/cp -R system $DEPLOYPATH
+#    - /bin/cp -R tests $DEPLOYPATH
+#    - /bin/cp -R api.php $DEPLOYPATH
+#    - /bin/cp -R index.php $DEPLOYPATH
+#    - /bin/cp -R student.php $DEPLOYPATH
+#    - /bin/cp -R transport.php $DEPLOYPATH
 
 
